--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+@import 'normalize.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -40,3 +41,7 @@ body {
     color: red;
   }
 
+  .navbar-link.active {
+    @apply text-white !important; 
+    @apply bg-black !important;
+  }
