Added the targer and rel no open in a new window the hyperlinks v3

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,52 +1,73 @@
-@import 'normalize.css';
+@import "normalize.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-    height: 100vh;
-  }
-  
-  .ql-editor {
-    font-size: 1.05rem;
-  }
-  
-  .post-content p {
-    margin-bottom: 0.5rem;
-  }
-  
-  .post-content h1 {
-    font-size: 1.5rem;
-    font-weight: 600;
-    font-family: sans-serif;
-    margin: 1.5rem 0;
-  }
-  
-  .post-content h2 {
-    font-size: 1.4rem;
-    font-family: sans-serif;
-    margin: 1.5rem 0;
-  }
-  
-  .post-content a {
-    color: rgb(73, 149, 199); /* Change to blueEx */
-    text-decoration: none;
-  }
-  
-  .post-content a:hover {
-    text-decoration: underline;
-  }
-  
-  .dark .post-content a {
-    color: red; /* Change to greenEx */
-  }
+  height: 100vh;
+}
 
-  .navbar-link.active {
-    @apply text-white !important; 
-    @apply bg-black !important;
-  }
+.ql-editor {
+  font-size: 1.05rem;
+}
 
-  .dark .ql-editor::before {
-    color: #ffffff; /* White color for dark mode */
-    opacity: 0.6; /* Adjust opacity as needed */
-  }
+.post-content p {
+  margin-bottom: 0.5rem;
+}
+
+.post-content h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: sans-serif;
+  margin: 1.5rem 0;
+}
+
+.post-content h2 {
+  font-size: 1.4rem;
+  font-family: sans-serif;
+  margin: 1.5rem 0;
+}
+
+.post-content a {
+  color: rgb(73, 149, 199); /* Change to blueEx */
+  text-decoration: none;
+}
+
+.post-content a:hover {
+  text-decoration: underline;
+}
+
+.dark .post-content a {
+  color: red; /* Change to greenEx */
+}
+
+.navbar-link.active {
+  @apply text-white !important;
+  @apply bg-black !important;
+}
+
+.dark .ql-editor::before {
+  color: #ffffff; /* White color for dark mode */
+  opacity: 0.6; /* Adjust opacity as needed */
+}
+
+/* Custom Hover Gradient for Instagram */
+.hover-instagram-gradient {
+  background: linear-gradient(
+    90deg,
+    #ffd700,
+    #e4405f,
+    #833ab4
+  ); /* Yellow, pink, purple */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: background 0.3s ease-in-out;
+}
+
+/* Custom Hover Gradient for TikTok */
+.hover-tiktok-gradient {
+  background: linear-gradient(90deg, #69c9d0, #ee1d52); /* Cyan to pink */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: background 0.3s ease-in-out;
+}
